--- a/content/problem-questions.tex
+++ b/content/problem-questions.tex
@@ -9,6 +9,6 @@ To address these issues, machine learning approaches, which are particularly eff
 The research aims to answer the following questions:
 \begin{enumerate}
 	\item What is the neutrino flux production beyond the Standard Solar Model in low mass stars?
-	\item Is machine learning able to give the best estimate in the current solar neutrino productions and what is the limit when extended to beyond the Standard Solar Model? 
+	\item Is machine learning able to give the best estimate in the current solar neutrino productions? 
 	
 \end{enumerate}
