--- a/content/results.tex
+++ b/content/results.tex
@@ -1,1 +1,19 @@
 \section{Results}
+
+\begin{equation}
+    e=\sqrt{(x_p-x_g)^2+(y_p-y_g)^2}
+\end{equation}
+
+\begin{table}
+    \centering
+	\caption{Stars with their mass and distance.}
+	\label{tab:stars and mass}
+	\begin{tabular}{ccc}
+		\toprule
+		Star & Mass [$M\odot$]  & Distance [$pc$] \\
+		\midrule
+		$\tau$ ceti & $0.78$ & $3.65$\\
+		Sun & $1$ & $4.85\times 10^{-6}$\\
+		\bottomrule
+	\end{tabular}
+\end{table}
