--- a/ref.bib
+++ b/ref.bib
@@ -16,6 +16,18 @@
 	title = {{Nuclear Physics of Stars}},
 	year = {2007},
 }
+@article{yusof-2021,
+	author = {Yusof, N and Kassim, H Abu and Garba, L G and Ahmad, N S},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	month = {3},
+	number = {4},
+	pages = {5965--5975},
+	title = {{The neutrino emission from thermal processes in very massive stars in the local universe}},
+	volume = {503},
+	year = {2021},
+	doi = {10.1093/mnras/stab762},
+	url = {https://doi.org/10.1093/mnras/stab762},
+}
 @book{athar-2020,
 	author = {Athar, M. Sajjad and Singh, S. K.},
 	month = {12},
@@ -85,6 +97,47 @@ author = {Ebraheem Farag and F. X. Timmes and Morgan Taylor and Kelly M. Patton 
 title = {On Stellar Evolution in a Neutrino Hertzsprung–Russell Diagram},
 journal = {The Astrophysical Journal},
 abstract = {We explore the evolution of a select grid of solar metallicity stellar models from their pre-main-sequence phase to near their final fates in a neutrino Hertzsprung–Russell diagram, where the neutrino luminosity replaces the traditional photon luminosity. Using a calibrated MESA solar model for the solar neutrino luminosity ( ·  ×  1031 erg s−1) as a normalization, we identify ≃0.3 MeV electron neutrino emission from helium burning during the helium flash (peak , flux  (10 pc/d)2 cm−2 s−1 for a star located at a distance of d parsec, timescale ≃3 days) and the thermal pulse (peak , flux  × 107 (10 pc/d)2 cm−2 s−1, timescale ≃0.1 yr) phases of evolution in low-mass stars as potential probes for stellar neutrino astronomy. We also delineate the contribution of neutrinos from nuclear reactions and thermal processes to the total neutrino loss along the stellar tracks in a neutrino Hertzsprung–Russell diagram. We find, broadly but with exceptions, that neutrinos from nuclear reactions dominate whenever hydrogen and helium burn, and that neutrinos from thermal processes dominate otherwise.}
+}
+@article{fuller-2022,
+	author = {Fuller, G. M. and Haxton, W. C.},
+	journal = {arXiv (Cornell University)},
+	month = {1},
+	title = {{Neutrinos in stellar astrophysics}},
+	year = {2022},
+	doi = {10.48550/arxiv.2208.08050},
+	url = {https://arxiv.org/abs/2208.08050},
+}
+@article{paxton-2010,
+	author = {Paxton, Bill and Bildsten, Lars and Dotter, Aaron and Herwig, Falk and Lesaffre, Pierre and Timmes, Frank},
+	journal = {The Astrophysical Journal Supplement Series},
+	month = {12},
+	number = {1},
+	pages = {3},
+	title = {{MODULES FOR EXPERIMENTS IN STELLAR ASTROPHYSICS (MESA)}},
+	volume = {192},
+	year = {2010},
+	doi = {10.1088/0067-0049/192/1/3},
+	url = {https://doi.org/10.1088/0067-0049/192/1/3},
+}
+@misc{kopp2024improvingneutrinoenergyreconstruction,
+      title={Improving Neutrino Energy Reconstruction with Machine Learning}, 
+      author={Joachim Kopp and Pedro Machado and Margot MacMahon and Ivan Martinez-Soler},
+      year={2024},
+      eprint={2405.15867},
+      archivePrefix={arXiv},
+      primaryClass={hep-ph},
+      url={https://arxiv.org/abs/2405.15867}, 
+}
+@book{bertulani-2013,
+	author = {Bertulani, Carlos A.},
+	month = {1},
+	publisher = {World Scientific Publishing Company Incorporated},
+	title = {{Nuclei in the cosmos}},
+	year = {2013},
+}
+@misc{SuperK,
+	title = {{Overview | Super-Kamiokande Official Webiste}},
+	url = {https://www-sk.icrr.u-tokyo.ac.jp/en/sk/about/outline/},
 }
 @article{ADDAZI2022103948,
 title = {Quantum gravity phenomenology at the dawn of the multi-messenger era—A review},
