--- a/content/literature.tex
+++ b/content/literature.tex
@@ -33,8 +33,8 @@ Most of them produce neutrinos through $\beta$ decays and electron(positron) cap
 		\toprule
 		Name & Reaction \\
 		\midrule
-		$\beta^+$ decays & $n\rightarrow p+e^-+\nu_e$ \\
-		$\beta^-$ decays & $p\rightarrow n+e^++\bar\nu_e$ \\
+		$\beta^-$ decays & $n\rightarrow p+e^-+\bar\nu_e$ \\
+		$\beta^+$ decays & $p\rightarrow n+e^++\nu_e$ \\
 		$e^-$ capture & $e^-+p\rightarrow n+\nu_e$ \\
 		$e^+$ capture & $e^++n\rightarrow p+\bar\nu_e$ \\
 		\bottomrule
