--- a/content/literature.tex
+++ b/content/literature.tex
@@ -19,7 +19,7 @@ An elementary particle first proposed by Pauli in 1931 and named by Fermi; the n
 There are multiple sources of neutrino both on earth and extraterrestrial, for example the Cosmic Neutrino Background (CNB), Supernovae, Solar and Thermal neutrinos from the sun, Geoneutrinos and many more as shown in Figure~\ref{fig:Nsource} \shortcite{athar-2020}. 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth]{assets/NeutrinoSourcesSajjad.png}
+	\includegraphics[width=\textwidth,height=\textheight]{assets/NeutrinoSourcesSajjad.png}
 	\caption{Neutrino sources.}
 	\label{fig:Nsource}
 \end{figure}
@@ -45,7 +45,7 @@ that produce $\nu$.
 And unlike most other particles which are charged neutrinos can be assumed to come directly from their source as they are not deflected by magnetic field and unlike photons, neutrinos weakly interact making them able to pass through matter easily, the interaction length of a 1-TeV neutrino is about 2.5 million kilometers of water, or \SI{250}{\kilo\tonne\per\centi\meter\squared}, whereas high-energy photons are blocked by a few hundred \SI{}{\gram\per\centi\meter\squared} \shortcite{barenboim-2003}.
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth]{assets/GUNS.png}
+	\includegraphics[width=\textwidth,height=\textheight]{assets/GUNS.png}
 	\caption{Grand Unified Neutrino Spectrum.}
 	\label{Graph:Guns}
 \end{figure}
@@ -74,7 +74,7 @@ Which comes from several reaction chains and cycles \shortcite{vitagliano-2020}.
 	\centering
 	\captionsetup{width=\textwidth}
 	\caption{Expected neutrino fluxes.}
-	\includegraphics[width=\textwidth]{assets/SSMexpect.png}
+	\includegraphics[width=\textwidth,height=\textheight]{assets/SSMexpect.png}
 	\label{table:SSMflux}
 \end{table}
 \end{minipage}
@@ -109,7 +109,7 @@ Dense neural network was proposed by \shortciteA{kopp2024improvingneutrinoenergy
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth]{assets/DNNmachinelearning.png}
+	\includegraphics[width=\textwidth,height=0.4\textheight]{assets/DNNmachinelearning.png}
 	\caption{Top: Fractional neutrino energy resolution $\sigma (E_{\nu})/E_{\nu}$. Bottom: Reconstruction bias for the DNN and the calorimetric method. 
 	}
 	\label{graph:DNN}
@@ -132,7 +132,7 @@ In Figure~\ref{fig:SLP} \shortcite{rodrigues-2023}, usually in supervised learni
 In research done by \shortcite{niu-2019}, by using Bayesian neural network (BNN) which is a machine learning technique, they manage to get results that well reproduce the experimental data with very high accuracy and provide reasonable uncertainty in half-life prediction as shown in Figure~\ref{fig:NNcon} compared to prediction done using calculation.  
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth]{assets/NNcon.png}
+	\includegraphics[width=\textwidth,height=0.4\textheight]{assets/NNcon.png}
 	\caption{$\beta$ decay half-life of Ni isotopes.}
 	\label{fig:NNcon}
 \end{figure}
@@ -140,7 +140,7 @@ In research done by \shortcite{niu-2019}, by using Bayesian neural network (BNN)
 Where the experimental values in NUBASE2016 are denoted by spheres. The half-life predictions with calculation are shown by the dotted line, and their counterparts improved by BNN-I2 and BNN-I4 approaches, and their uncertainties are shown by vertical line hatched region and green hatched region, respectively. The mean predicted half-lives of BNN-I4 approach are marked by the dashed line.
 
 \subsection{Linear Regression}
-Least squares is a regression analysis that does parameter estimation based on finding the minimum of the sum of the squares of the residuals. Linear least square can be used when there is a linear combination of parameters:
+Least squares is a regression analysis that does parameter estimation based on finding the minimum of the sum of the squares of the residuals. Linear least square can be used when there is a linear combination of parameters \shortcite{williams-2016}:
 \begin{equation}
 	Y(x,\beta)=\sum_{j=1}^{m}\beta_{j}X_{j}
 \end{equation}
