--- a/main.tex
+++ b/main.tex
@@ -117,7 +117,7 @@
 \input{content/literature.tex}
 \clearpage
 \input{content/method.tex}
-\clearpage
+% \clearpage
 \input{content/results.tex}
 \clearpage
 \input{content/conclusion.tex}
