--- a/ref.bib
+++ b/ref.bib
@@ -119,6 +119,13 @@ abstract = {We explore the evolution of a select grid of solar metallicity stell
 	doi = {10.1088/0067-0049/192/1/3},
 	url = {https://doi.org/10.1088/0067-0049/192/1/3},
 }
+@book{williams-2016,
+	author = {Williams, Jeffrey H},
+	month = {11},
+	publisher = {Morgan \& Claypool Publishers},
+	title = {{Quantifying measurement}},
+	year = {2016},
+}
 @misc{kopp2024improvingneutrinoenergyreconstruction,
       title={Improving Neutrino Energy Reconstruction with Machine Learning}, 
       author={Joachim Kopp and Pedro Machado and Margot MacMahon and Ivan Martinez-Soler},
